# virt-manager

./: meson_options.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  test-against-libvirt-git.yml
tests/: meson.build
virtinst/: meson.build
